# telemap

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  EXPLAIN.md  LICENSE  README.md
.github/workflows/: lint.yml  test.yml
config/: .gitignore  answer_machine.json.example  echo.json.example
src/: app.rs  config.rs  main.rs
src/processing/: data.rs  filter.rs  helpers.rs  mod.rs  pipe.rs  pipeline.rs  test_helpers.rs
src/processing/filters/: README.md  ai.rs  counter.rs  duration.rs  file_size.rs  incoming.rs  message_type.rs  mod.rs  openai.rs  regexp.rs  text_length.rs  unique.rs  wordlist.rs
src/processing/pipes/: README.md  format.rs  mod.rs  replace.rs  replace_regexp.rs  static_text.rs  statics.rs  transform.rs
