[package]
name = "telemap"
version = "0.1.0"
authors = ["anwsonwsymous <anwsonwsymous@gmail.com>"]
description = "Map content from one chat to another with TDLib."
edition = "2021"

[[bin]]
name = "telemap"
path = "src/main.rs"

[dependencies]
argh = "0.1.7"
rust-tdlib = "0.4.1"
lazy_static = "1.4.0"
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
log = "0.4"
env_logger = "0.11.3"
colored = "2.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
dotenv = "0.15.0"
regex = "1.6.0"
rpassword = "7.0.0"
pickledb = { version = "0.5.1", optional = true }
md5 = { version = "0.7.0", optional = true }
strfmt = { version = "0.2.4", optional = true }
async-openai = { version = "0.19.0", optional = true }

[features]
default = ["storage", "templating", "ai"]
storage = ["dep:pickledb", "dep:md5"]
templating = ["dep:strfmt"]
ai = ["dep:async-openai"]